kubernetes/kustomize/distgit.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: copr-distgit
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      component: copr-distgit
  template:
    metadata:
      labels:
        component: copr-distgit
    spec:
      containers:
        - image: copr_distgit-httpd:latest
          imagePullPolicy: Always
          name: copr-distgit-httpd
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 30
            timeoutSeconds: 5
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 5
            timeoutSeconds: 5
          resources:
            requests:
              cpu: 200m
              memory: 200Mi
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/dist-git
              name: copr-distgit-data
        - image: copr_distgit:latest
          imagePullPolicy: IfNotPresent
          name: copr-distgit
          resources:
            requests:
              cpu: 200m
              memory: 200Mi
          volumeMounts:
            - mountPath: /var/lib/dist-git
              name: copr-distgit-data
            - mountPath: /etc/copr/copr-dist-git.conf
              name: copr-distgit
              subPath: copr-dist-git.conf
          command:
            - /bin/sh
            - -c
            - |
              mkdir -p /var/lib/dist-git/cache /var/lib/dist-git/git;
              exec /usr/sbin/runuser -u root -g packager /usr/bin/importer_runner.py
      volumes:
        - name: copr-distgit-data
          persistentVolumeClaim:
            claimName: copr-distgit-data
        - name: copr-distgit
          configMap:
            name: copr-distgit

---
apiVersion: v1
kind: Service
metadata:
  name: copr-distgit
spec:
  ports:
    - name: httpd
      port: 5001
      protocol: TCP
      targetPort: 80
  selector:
    component: copr-distgit
  type: ClusterIP
