kubernetes/kustomize/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: copr-redis
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      component: copr-redis
  template:
    metadata:
      labels:
        component: copr-redis
    spec:
      containers:
        - image: centos/redis-32-centos7
          imagePullPolicy: IfNotPresent
          name: copr-redis
          livenessProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 30
            timeoutSeconds: 5
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - -i
                - -c
                - test "$(redis-cli -h 127.0.0.1 ping)" == "PONG"
            initialDelaySeconds: 5
            timeoutSeconds: 5
          resources:
            requests:
              cpu: 500m
              memory: 500Mi
          ports:
            - containerPort: 6379
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/redis/data
              name: redis-data
      volumes:
        - name: redis-data
          persistentVolumeClaim:
            claimName: copr-redis-data
---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  ports:
    - name: redis
      port: 6379
      protocol: TCP
      targetPort: 6379
  selector:
    component: copr-redis
  type: ClusterIP
