kubernetes/kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: copr-ingress
spec:
  rules:
    - host: sample.copr.org
      http:
        paths:
          - backend:
              service:
                name: copr-distgit
                port:
                  number: 5001
            path: /cgit/
            pathType: ImplementationSpecific
          - backend:
              service:
                name: copr-distgit
                port:
                  number: 5001
            path: /cgit-data/
            pathType: ImplementationSpecific
          - backend:
              service:
                name: copr-backend
                port:
                  number: 5002
            path: /results/
            pathType: ImplementationSpecific
          - backend:
              service:
                name: copr-frontend
                port:
                  number: 5000
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - sample.copr.org
      secretName: copr-frontend-tls
